# SumTEditor

./: .gitignore  CMakeLists.txt  LICENSE  README.md  README.zh-CN.md
.github/workflows/: ci.yml  release.yml
docs/: github-actions.md
examples/: sample.conf
include/sumt/: config.hpp  document.hpp
src/: config.cpp  document.cpp  main.cpp  tui_app.cpp
tests/: test_core.cpp
